--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,4 @@
+Bringing a Blurry Frame Alive at High Frame-Rate with an Event Camera 
 
 Please run ‘./snowman codefortest/maindalta.m’, and man-
 ually change the two slide bars to visualize the recon-
