--- a/ReadMe
+++ b/ReadMe
@@ -3,9 +3,10 @@ Bringing a Blurry Frame Alive at High Frame-Rate with an Event Camera
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+Paper
 https://arxiv.org/abs/1811.10180v1
-
+Data
+https://drive.google.com/file/d/1s-PR7GxpCAIB20hu7F3BlbXdUi4c9UAo/view?usp=sharing 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Please run ‘./snowman codefortest/maindalta.m’, 
